--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Quintessential&family=Roboto:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Hind:wght@300&display=swap');
 
 $fontMain:'Roboto', sans-serif;
 $fontSecondary: 'Comfortaa', cursive;
+$fontTitle:'Noto Serif', serif;
+$fontP:'Hind', sans-serif;
