mejora de pagina

--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -2,8 +2,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Quintessential&family=Roboto:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Noto+Serif:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Hind:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@600;900&display=swap');
 
 $fontMain:'Roboto', sans-serif;
 $fontSecondary: 'Comfortaa', cursive;
 $fontTitle:'Noto Serif', serif;
 $fontP:'Hind', sans-serif;
+$font404:'Nunito Sans', sans-serif;
