--- a/scss/_commons.scss
+++ b/scss/_commons.scss
@@ -1,9 +1,16 @@
 //mixins
-@mixin texto($font-size, $line-height, $color){
+@mixin texto($font-size, $line-height, $color, $font-family){
 	font-size: $font-size;
 	line-height: $line-height;
 	color: $color;
 	padding: 5px;
+	font-family:$font-family;
+}
+
+@mixin imagen($width,$height){
+	 height: $height;
+	 width: $width;
+	 padding: 10px 10px;
 }
 
 @mixin flex($justify,$align){
@@ -12,58 +19,61 @@
 	align-items:$align;
 }
 
-$paleta:(
-	'uno': #FAFAFA,
-    'dos': #F4F4F4,
-    'tres':#6610f2,
-    'cuatro':#E3E3E2,);
+    $paleta:(
+		'blanco': #FAFAFA,
+	    'negro': #000000,
+	    'principal':#6610f2,
+	    'violeta':#50008A,
+	    'morado':#6F00C1,
+	    'moradoOscuro':#280046);
 
-.logo img{
-     width: 200px;
-     height: auto;
-     padding: 10px 10px;
-   }
+   .logo img{
+      @include imagen(200px,auto);
+      }
    
    .regCarro{
    	    @include flex(center,flex-end);
    	     & img:hover{
-				 transform: skew(-20deg);
+				 transform: skew(20deg);
 				 cursor: pointer;
 				 transition: transform 3s;
                 }
-   }
+        }
    
     .regCarro a{
    	    @include flex(space-between,center);
    	    text-decoration: none;
-         color: #5B5959;
+         color:map-get($map:$paleta,$key:'negro');
          padding: 10px 10px;
           &:hover{
-			color: grey;
-			font-weight: 600;
+			color:map-get($map:$paleta,$key:'negro');
+			font-weight: 800;
           }
-   }
-  
+    } 
      #botonera{
-	  background-color:map-get($map:$paleta,$key:'tres');
-	  opacity: 0.9;
-	     & div ul li a:hover{
-			  background-color:black; 
-		     }
+	    background-color: #330055;
+		background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 1000'%3E%3Cg %3E%3Ccircle fill='%23330055' cx='50' cy='0' r='50'/%3E%3Cg fill='%233a015d' %3E%3Ccircle cx='0' cy='50' r='50'/%3E%3Ccircle cx='100' cy='50' r='50'/%3E%3C/g%3E%3Ccircle fill='%23410165' cx='50' cy='100' r='50'/%3E%3Cg fill='%2348026e' %3E%3Ccircle cx='0' cy='150' r='50'/%3E%3Ccircle cx='100' cy='150' r='50'/%3E%3C/g%3E%3Ccircle fill='%23500376' cx='50' cy='200' r='50'/%3E%3Cg fill='%2357047e' %3E%3Ccircle cx='0' cy='250' r='50'/%3E%3Ccircle cx='100' cy='250' r='50'/%3E%3C/g%3E%3Ccircle fill='%235f0587' cx='50' cy='300' r='50'/%3E%3Cg fill='%2367068f' %3E%3Ccircle cx='0' cy='350' r='50'/%3E%3Ccircle cx='100' cy='350' r='50'/%3E%3C/g%3E%3Ccircle fill='%236f0798' cx='50' cy='400' r='50'/%3E%3Cg fill='%237707a0' %3E%3Ccircle cx='0' cy='450' r='50'/%3E%3Ccircle cx='100' cy='450' r='50'/%3E%3C/g%3E%3Ccircle fill='%238008a9' cx='50' cy='500' r='50'/%3E%3Cg fill='%238909b1' %3E%3Ccircle cx='0' cy='550' r='50'/%3E%3Ccircle cx='100' cy='550' r='50'/%3E%3C/g%3E%3Ccircle fill='%239109ba' cx='50' cy='600' r='50'/%3E%3Cg fill='%239a09c3' %3E%3Ccircle cx='0' cy='650' r='50'/%3E%3Ccircle cx='100' cy='650' r='50'/%3E%3C/g%3E%3Ccircle fill='%23a309cb' cx='50' cy='700' r='50'/%3E%3Cg fill='%23ad09d4' %3E%3Ccircle cx='0' cy='750' r='50'/%3E%3Ccircle cx='100' cy='750' r='50'/%3E%3C/g%3E%3Ccircle fill='%23b608dc' cx='50' cy='800' r='50'/%3E%3Cg fill='%23c007e5' %3E%3Ccircle cx='0' cy='850' r='50'/%3E%3Ccircle cx='100' cy='850' r='50'/%3E%3C/g%3E%3Ccircle fill='%23c905ee' cx='50' cy='900' r='50'/%3E%3Cg fill='%23d303f6' %3E%3Ccircle cx='0' cy='950' r='50'/%3E%3Ccircle cx='100' cy='950' r='50'/%3E%3C/g%3E%3Ccircle fill='%23D0F' cx='50' cy='1000' r='50'/%3E%3C/g%3E%3C/svg%3E");
+		background-attachment: fixed;
+		background-size: contain;
+	    opacity: 0.9;
+	    & div ul li a{
+            border-radius:20px;
+	        &:hover{
+				  background-color:map-get($map:$paleta,$key:'moradoOscuro');
+			     }
+		  }
      }
-     #botonera div ul li a{
-       border-radius: 20px;
-     }
+   
      #botoneraTitulo{
 	   @extend #botonera;
      }
      #botoneraTitulo h1{
      	font-family: $fontTitle;
-     	color: white;
+     	color:map-get($map:$paleta,$key:'blanco');
      	font-weight: 600;
      }
      #botoneraDetalles{
-	  background-color:map-get($map:$paleta,$key:'uno');
+	  background-color:map-get($map:$paleta,$key:'blanco');
 	  opacity: 0.9;
      }
      #botoneraDetalles div ul li a{
@@ -71,61 +81,53 @@ $paleta:(
       	text-decoration: none;
      }
      #botoneraDetalles div ul li a:hover{
-	     background-color:map-get($map:$paleta,$key:'dos');
-	     opacity: 0.8;
-		color:black;
-	    font-weight: 600;
-	    cursor: pointer;
+		 color:map-get($map:$paleta,$key:'negro');
+	     font-weight: 800;
+	     cursor: pointer;
 	}
-     .detalles p{
-     	@include texto(1.2em,1em,black);
-        font-family:$fontP; 
+    #botoneraLogin div ul li a{
+		color:map-get($map:$paleta,$key:'blanco');
+		text-decoration: none;
+		   &:hover{
+		      color:map-get($map:$paleta,$key:'blanco');
+			   font-weight: 600;
+			   cursor: pointer;
+		      	}
+	}
+    .textoDetalles p{
+     	@include texto(1.2em,1em,black,$fontP);
      }
-     #Importante{
+     #textoImportante{
      	font-weight: 600;
-     	color:map-get($map:$paleta,$key:'tres');
+     	color:map-get($map:$paleta,$key:'moradoOscuro');
      }
-	.encabezadoCajagris{
-		background-color: gray;
-		color:white;
+	.encabezadoContacto{
+		background-color:map-get($map:$paleta,$key:'negro');
+		color:map-get($map:$paleta,$key:'blanco');
 		height: 30px;
 	}
 
 	.redesExtras{
 		@include flex(center,center);
 		flex-direction: column;
-		background-color: white;
 	}
-	   .redes img{
+	.redes img{
 	      text-decoration: none;
 	      padding: 10px;
+	      &:hover{
+			    transform: scale(1.2);
+			    cursor: pointer;
+			    transition: transform 1s;
+            }
 		}
-		.redes img:hover{
-		    transform: scale(1.2);
-		    cursor: pointer;
-		    transition: transform 1s;
-        }
-      #formContainer{
-      	background-color:map-get($map:$paleta,$key:'cuatro');
-      	opacity: 0.8;
-      }
 	 
-    #productos h1,
-    #productos h2{
-    	text-transform: uppercase;
-		font-size: 1.5rem;
-		text-align: center;
-		color: white;
-		padding: 15px 0;
-		background-color:black;
-		font-family: $fontMain;
-    }
-	#productos .masVendidos{
+	 #productos .masVendidos{
 	    @include flex(space-evenly,center);
 	    flex-wrap: wrap;
-	    background-color: rgba(242, 242, 242, 1);	    
-	}
+	    background-color: rgb(242, 242, 242);	    
+	   }
 		#productos .masVendidos figure{
+			border-radius: 5px;
 			text-align: center;
 			padding: 20px 0px;
 		}
@@ -136,24 +138,25 @@ $paleta:(
 			}
 			
 			#productos .masVendidos figure figcaption{
-				font-size: 2rem;
-				color: black;
+				font-size: 1.5rem;
+				color:map-get($map:$paleta,$key:'blanco');
 				padding: 20px 0;
-				background-color: white;
+				background-color: black;
 			}
 
 			#productos .masVendidos p.price{
-				color: black;
-				padding-bottom: 10px;
-				background-color: white;
+				font-size: 1.2rem;
+				color:map-get($map:$paleta,$key:'negro');
+				padding:10px 10px;
+				background-color:map-get($map:$paleta,$key:'blanco');
 			}
 
 			#productos .masVendidos a.btn{
 				width:200px;
 				height:50px;
-				background-color: black;
+				background-color:map-get($map:$paleta,$key:'negro');
 				font-family: $fontP;
-				color:white;
+				color:map-get($map:$paleta,$key:'blanco');
 				text-align: center;
 				text-decoration: none;
 				border-radius: 5px;
@@ -162,3 +165,62 @@ $paleta:(
 			    @include flex(center,center);				
 			}
 
+       .e404{
+		  background: rgb(139,38,255);
+          background: radial-gradient(circle, rgba(139,38,255,1) 0%, rgba(0,0,0,1) 100%);
+          height: 100%;
+		}
+	   .e404 a{
+		  text-decoration: none;
+		  color:map-get($map:$paleta,$key:'blanco');
+		  &:hover {
+			  color:map-get($map:$paleta,$key:'negro');
+			  font-weight:800;
+		    }
+		}		  
+		.textoNumero{
+		  @include texto(15rem,1em,#ffffff,$font404);
+		}
+		.textoError{
+		    @include texto(7rem,1em,#ffffff,$font404);
+		}
+		.letraRotatoria {		  
+		  font-size: 15rem;
+		  color:map-get($map:$paleta,$key:'blanco');
+		}
+		.msgError{
+			@include texto(2.2rem,1em,#ffffff,$font404);
+		    text-align: center;
+		  }
+		 .imgGif{
+		 	@include imagen(400px,auto);
+		 }
+		 .imgGif2{
+		 	@include imagen(300px,auto);
+		 }
+		 .fondoLogin{
+		 	background-color: #330033;
+            background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='400' height='400' viewBox='0 0 800 800'%3E%3Cg fill='none' stroke='%23404' stroke-width='1'%3E%3Cpath d='M769 229L1037 260.9M927 880L731 737 520 660 309 538 40 599 295 764 126.5 879.5 40 599-197 493 102 382-31 229 126.5 79.5-69-63'/%3E%3Cpath d='M-31 229L237 261 390 382 603 493 308.5 537.5 101.5 381.5M370 905L295 764'/%3E%3Cpath d='M520 660L578 842 731 737 840 599 603 493 520 660 295 764 309 538 390 382 539 269 769 229 577.5 41.5 370 105 295 -36 126.5 79.5 237 261 102 382 40 599 -69 737 127 880'/%3E%3Cpath d='M520-140L578.5 42.5 731-63M603 493L539 269 237 261 370 105M902 382L539 269M390 382L102 382'/%3E%3Cpath d='M-222 42L126.5 79.5 370 105 539 269 577.5 41.5 927 80 769 229 902 382 603 493 731 737M295-36L577.5 41.5M578 842L295 764M40-201L127 80M102 382L-261 269'/%3E%3C/g%3E%3Cg fill='%23505'%3E%3Ccircle cx='769' cy='229' r='5'/%3E%3Ccircle cx='539' cy='269' r='5'/%3E%3Ccircle cx='603' cy='493' r='5'/%3E%3Ccircle cx='731' cy='737' r='5'/%3E%3Ccircle cx='520' cy='660' r='5'/%3E%3Ccircle cx='309' cy='538' r='5'/%3E%3Ccircle cx='295' cy='764' r='5'/%3E%3Ccircle cx='40' cy='599' r='5'/%3E%3Ccircle cx='102' cy='382' r='5'/%3E%3Ccircle cx='127' cy='80' r='5'/%3E%3Ccircle cx='370' cy='105' r='5'/%3E%3Ccircle cx='578' cy='42' r='5'/%3E%3Ccircle cx='237' cy='261' r='5'/%3E%3Ccircle cx='390' cy='382' r='5'/%3E%3C/g%3E%3C/svg%3E");
+		   background-attachment: fixed;
+		 }
+		 .fondoContacto{
+		 	background-color: #330055;
+			background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 1000'%3E%3Cg %3E%3Ccircle fill='%23330055' cx='50' cy='0' r='50'/%3E%3Cg fill='%233a015d' %3E%3Ccircle cx='0' cy='50' r='50'/%3E%3Ccircle cx='100' cy='50' r='50'/%3E%3C/g%3E%3Ccircle fill='%23410165' cx='50' cy='100' r='50'/%3E%3Cg fill='%2348026e' %3E%3Ccircle cx='0' cy='150' r='50'/%3E%3Ccircle cx='100' cy='150' r='50'/%3E%3C/g%3E%3Ccircle fill='%23500376' cx='50' cy='200' r='50'/%3E%3Cg fill='%2357047e' %3E%3Ccircle cx='0' cy='250' r='50'/%3E%3Ccircle cx='100' cy='250' r='50'/%3E%3C/g%3E%3Ccircle fill='%235f0587' cx='50' cy='300' r='50'/%3E%3Cg fill='%2367068f' %3E%3Ccircle cx='0' cy='350' r='50'/%3E%3Ccircle cx='100' cy='350' r='50'/%3E%3C/g%3E%3Ccircle fill='%236f0798' cx='50' cy='400' r='50'/%3E%3Cg fill='%237707a0' %3E%3Ccircle cx='0' cy='450' r='50'/%3E%3Ccircle cx='100' cy='450' r='50'/%3E%3C/g%3E%3Ccircle fill='%238008a9' cx='50' cy='500' r='50'/%3E%3Cg fill='%238909b1' %3E%3Ccircle cx='0' cy='550' r='50'/%3E%3Ccircle cx='100' cy='550' r='50'/%3E%3C/g%3E%3Ccircle fill='%239109ba' cx='50' cy='600' r='50'/%3E%3Cg fill='%239a09c3' %3E%3Ccircle cx='0' cy='650' r='50'/%3E%3Ccircle cx='100' cy='650' r='50'/%3E%3C/g%3E%3Ccircle fill='%23a309cb' cx='50' cy='700' r='50'/%3E%3Cg fill='%23ad09d4' %3E%3Ccircle cx='0' cy='750' r='50'/%3E%3Ccircle cx='100' cy='750' r='50'/%3E%3C/g%3E%3Ccircle fill='%23b608dc' cx='50' cy='800' r='50'/%3E%3Cg fill='%23c007e5' %3E%3Ccircle cx='0' cy='850' r='50'/%3E%3Ccircle cx='100' cy='850' r='50'/%3E%3C/g%3E%3Ccircle fill='%23c905ee' cx='50' cy='900' r='50'/%3E%3Cg fill='%23d303f6' %3E%3Ccircle cx='0' cy='950' r='50'/%3E%3Ccircle cx='100' cy='950' r='50'/%3E%3C/g%3E%3Ccircle fill='%23D0F' cx='50' cy='1000' r='50'/%3E%3C/g%3E%3C/svg%3E");
+			background-attachment: fixed;
+			background-size: contain;
+		 }
+
+		#formContainer{
+		    color:map-get($map:$paleta,$key:'blanco');
+		    font-size: 1.2rem;
+		    & h1{
+		       @include texto(2.6rem,1em,#ffffff,$fontTitle);
+			   font-weight: 600;
+			   text-align: center;
+		      	}
+		    }
+		.botonForm{
+		    width: 200px;
+		    height: auto;
+		  }
+		  
